--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "react-scripts",
+  "name": "ssun3-react-scripts",
   "version": "3.0.1",
-  "description": "Configuration and scripts for Create React App.",
+  "description": "Ssun3 Configuration and scripts for Create React App.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/facebook/create-react-app.git",
+    "url": "https://github.com/ssun3/create-react-app.git",
     "directory": "packages/react-scripts"
   },
   "license": "MIT",
